; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_dimension_slice.c_dimension_vec_tuple_found.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_dimension_slice.c_dimension_vec_tuple_found.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@SCAN_CONTINUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*, i8*)* @dimension_vec_tuple_found to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dimension_vec_tuple_found(%struct.TYPE_3__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to i32**
  store i32** %8, i32*** %5, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32* @dimension_slice_from_tuple(i32 %11)
  store i32* %12, i32** %6, align 8
  %13 = load i32**, i32*** %5, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = call i32* @ts_dimension_vec_add_slice(i32** %13, i32* %14)
  %16 = load i32**, i32*** %5, align 8
  store i32* %15, i32** %16, align 8
  %17 = load i32, i32* @SCAN_CONTINUE, align 4
  ret i32 %17
}

declare dso_local i32* @dimension_slice_from_tuple(i32) #1

declare dso_local i32* @ts_dimension_vec_add_slice(i32**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
